--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,243 @@
 <resources>
     <string name="app_name">Intento de login</string>
+    <string name="selected_country">Pais Seleccionado: </string>
+    <string-array name="Countries">
+        <item>Seleccione su nacionalidad</item>
+        <item>Afganistán</item>
+        <item>Albania</item>
+        <item>Argelia</item>
+        <item>Samoa Americana</item>
+        <item>Andorra</item>
+        <item>Angola</item>
+        <item>Anguilla</item>
+        <item>Antártida</item>
+        <item>Antigua y Barbuda</item>
+        <item>Argentina</item>
+        <item>Armenia</item>
+        <item>Aruba</item>
+        <item>Australia</item>
+        <item>Austria</item>
+        <item>Azerbaiyán</item>
+        <item>Bahamas</item>
+        <item>Bahrein</item>
+        <item>Bangladesh</item>
+        <item>Barbados</item>
+        <item>Bielorrusia</item>
+        <item>Bélgica</item>
+        <item>Belice</item>
+        <item>Benín</item>
+        <item>Bermudas</item>
+        <item>Bután</item>
+        <item>Bolivia</item>
+        <item>Bosnia-Herzegovina</item>
+        <item>Botsuana</item>
+        <item>Brasil</item>
+        <item>Brunei Darussalam</item>
+        <item>Bulgaria</item>
+        <item>Burkina Faso</item>
+        <item>Burundi</item>
+        <item>Camboya</item>
+        <item>Camerún</item>
+        <item>Canadá</item>
+        <item>Cabo Verde</item>
+        <item>Islas Caimán</item>
+        <item>República Centroafricana</item>
+        <item>Chad</item>
+        <item>Chile</item>
+        <item>China</item>
+        <item>Isla de Navidad, Isla Christmas</item>
+        <item>Islas Cocos</item>
+        <item>Colombia</item>
+        <item>Comores</item>
+        <item>República Democrática del Congo</item>
+        <item>República del Congo</item>
+        <item>Islas Cook</item>
+        <item>Costa Rica</item>
+        <item>Costa de Marfil</item>
+        <item>Croacia</item>
+        <item>Cuba</item>
+        <item>Chipre</item>
+        <item>República Checa</item>
+        <item>Dinamarca</item>
+        <item>Djibouti, Yibuti</item>
+        <item>Dominica</item>
+        <item>Dominicana, República</item>
+        <item>Timor Oriental</item>
+        <item>Ecuador</item>
+        <item>Egipto</item>
+        <item>El Salvador</item>
+        <item>Guinea Ecuatorial</item>
+        <item>Eritrea</item>
+        <item>Estonia</item>
+        <item>Etiopía</item>
+        <item>Islas Malvinas</item>
+        <item>Islas Feroe</item>
+        <item>Fiyi</item>
+        <item>Finlandia</item>
+        <item>Francia</item>
+        <item>Guayana Francesa</item>
+        <item>Polinesia Francesa</item>
+        <item>Tierras Australes y Antárticas Francesas</item>
+        <item>Gabón</item>
+        <item>Gambia</item>
+        <item>Georgia</item>
+        <item>Alemania</item>
+        <item>Ghana</item>
+        <item>Gibraltar</item>
+        <item>Grecia</item>
+        <item>Groenlandia</item>
+        <item>Granada</item>
+        <item>Guadalupe</item>
+        <item>Guam</item>
+        <item>Guatemala</item>
+        <item>República Guinea</item>
+        <item>Guinea Bissau</item>
+        <item>Guyana</item>
+        <item>Haiti</item>
+        <item>Honduras</item>
+        <item>Hong Kong</item>
+        <item>Hungría</item>
+        <item>Islandia</item>
+        <item>India</item>
+        <item>Indonesia</item>
+        <item>Irán</item>
+        <item>Iraq</item>
+        <item>Irlanda</item>
+        <item>Israel</item>
+        <item>Italia</item>
+        <item>Jamaica</item>
+        <item>Japón</item>
+        <item>Jordania</item>
+        <item>Kazajstán</item>
+        <item>Kenia</item>
+        <item>Kiribati</item>
+        <item>Corea del Norte</item>
+        <item>Corea del Sur</item>
+        <item>Kosovo</item>
+        <item>Kuwait</item>
+        <item>Kirguistán</item>
+        <item>Laos; oficialmente: República Democrática Popular Lao</item>
+        <item>Letonia</item>
+        <item>Líbano</item>
+        <item>Lesotho</item>
+        <item>Liberia</item>
+        <item>Libia</item>
+        <item>Liechtenstein</item>
+        <item>Lituania</item>
+        <item>Luxemburgo</item>
+        <item>Macao</item>
+        <item>Macedonia del Norte</item>
+        <item>Madagascar</item>
+        <item>Malawi</item>
+        <item>Malasia</item>
+        <item>Maldivas</item>
+        <item>Malí</item>
+        <item>Malta</item>
+        <item>Islas Marshall</item>
+        <item>Martinica</item>
+        <item>Mauritania</item>
+        <item>Mauricio</item>
+        <item>Mayotte</item>
+        <item>México</item>
+        <item>Micronesia, Estados Federados de</item>
+        <item>Moldavia</item>
+        <item>Mónaco</item>
+        <item>Mongolia</item>
+        <item>Montenegro</item>
+        <item>Montserrat</item>
+        <item>Marruecos</item>
+        <item>Mozambique</item>
+        <item>Myanmar, Birmania</item>
+        <item>Namibia</item>
+        <item>Nauru</item>
+        <item>Nepal</item>
+        <item>Países Bajos, Holanda</item>
+        <item>Antillas Holandesas</item>
+        <item>Nueva Caledonia</item>
+        <item>Nueva Zelanda</item>
+        <item>Nicaragua</item>
+        <item>Niger</item>
+        <item>Nigeria</item>
+        <item>Niue</item>
+        <item>Marianas del Norte</item>
+        <item>Noruega</item>
+        <item>Omán</item>
+        <item>Pakistán</item>
+        <item>Palau</item>
+        <item>Territorios Palestinos</item>
+        <item>Panamá</item>
+        <item>Papúa-Nueva Guinea</item>
+        <item>Paraguay</item>
+        <item>Perú</item>
+        <item>Filipinas</item>
+        <item>Isla Pitcairn</item>
+        <item>Polonia</item>
+        <item>Portugal</item>
+        <item>Puerto Rico</item>
+        <item>Qatar</item>
+        <item>Reunión</item>
+        <item>Rumanía</item>
+        <item>Federación Rusa</item>
+        <item>Ruanda</item>
+        <item>San Cristobal y Nevis</item>
+        <item>Santa Lucía</item>
+        <item>San Vincente y Granadinas</item>
+        <item>Samoa</item>
+        <item>San Marino</item>
+        <item>Santo Tomé y Príncipe</item>
+        <item>Arabia Saudita</item>
+        <item>Senegal</item>
+        <item>Serbia</item>
+        <item>Seychelles</item>
+        <item>Sierra Leona</item>
+        <item>Singapur</item>
+        <item>Eslovaquia</item>
+        <item>Eslovenia</item>
+        <item>Islas Salomón</item>
+        <item>Somalia</item>
+        <item>Sudáfrica</item>
+        <item>Sudán del Sur</item>
+        <item>España</item>
+        <item>Sri Lanka</item>
+        <item>Sudán</item>
+        <item>Surinam</item>
+        <item>Suazilandia</item>
+        <item>Suecia</item>
+        <item>Suiza</item>
+        <item>Siria</item>
+        <item>Taiwán (República de China)</item>
+        <item>Tadjikistan</item>
+        <item>Tanzania</item>
+        <item>Tailandia</item>
+        <item>Tíbet</item>
+        <item>Timor Oriental</item>
+        <item>Togo</item>
+        <item>Tokelau</item>
+        <item>Tonga</item>
+        <item>Trinidad y Tobago</item>
+        <item>Túnez</item>
+        <item>Turquía</item>
+        <item>Turkmenistan</item>
+        <item>Islas Turcas y Caicos</item>
+        <item>Tuvalu</item>
+        <item>Uganda</item>
+        <item>Ucrania</item>
+        <item>Emiratos Árabes Unidos</item>
+        <item>Reino Unido</item>
+        <item>Estados Unidos</item>
+        <item>Uruguay</item>
+        <item>Uzbekistán</item>
+        <item>Vanuatu</item>
+        <item>Ciudad del Vaticano</item>
+        <item>Venezuela</item>
+        <item>Vietnam</item>
+        <item>Islas Virgenes Británicas</item>
+        <item>Islas Virgenes Americanas</item>
+        <item>Wallis y Futuna</item>
+        <item>Sáhara Occidental</item>
+        <item>Yemen</item>
+        <item>Zambia</item>
+        <item>Zimbabwe</item>
+  </string-array>
+
 </resources>
